--- a/pages/header.html
+++ b/pages/header.html
@@ -1,7 +1,7 @@
 <div class="header-fixed">
     <header class="header">
         <div class="header-logo">
-            <a href="./index.html"
+            <a href="../index.html"
                 ><img src="../assets/img/logo.png" alt="logo" class="head-logo"
             /></a>
             <div class="head-text">
@@ -30,9 +30,7 @@
     <nav class="nav">
         <ul class="nav-list">
             <li>
-                <a href="../pages/index.html" class="nav-item-link"
-                    >Trang chủ</a
-                >
+                <a href="../index.html" class="nav-item-link">Trang chủ</a>
             </li>
             <li>
                 <a href="../pages/about.html" class="nav-item-link"
