--- a/index.html
+++ b/index.html
@@ -295,6 +295,6 @@
             <div id="footer-include"></div>
         </main>
 
-        <script src="../assets/js/layout.js"></script>
+        <script src="./assets/js/layout.js"></script>
     </body>
 </html>
