--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         />
 
         <!-- FAVICON -->
-        <link rel="shortcut icon" href="./assets/img/logo.jpg" />
+        <link rel="shortcut icon" href="./assets/img/logo.png" />
 
         <!-- GOOGLE FONT -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,13 +22,13 @@
         />
 
         <!-- RESET CSS (luôn đầu tiên) -->
-        <link rel="stylesheet" href="./assets/css/resets.css" />
+        <link rel="stylesheet" href="assets/css/resets.css" />
 
         <!-- BASE / COMMON STYLE -->
-        <link rel="stylesheet" href="./assets/css/base.css" />
+        <link rel="stylesheet" href="assets/css/base.css" />
 
         <!-- MAIN (layout, header, footer, nav...) -->
-        <link rel="stylesheet" href="./assets/css/main.css" />
+        <link rel="stylesheet" href="assets/css/main.css" />
     </head>
     <body>
         <main id="app">
@@ -37,13 +37,13 @@
                 <section class="home-banner">
                     <div class="banner-bg">
                         <img
-                            src="./assets/img/bg-hospital-hall.png"
+                            src="assets/img/bg-hospital-hall.png"
                             alt="Hospital Hall"
                         />
                     </div>
 
                     <div class="blue-diagonal-shape">
-                        <img src="./assets/img/left-banner.png" alt="Shape" />
+                        <img src="assets/img/left-banner.png" alt="Shape" />
                     </div>
 
                     <button class="arrow prev">
@@ -74,13 +74,13 @@
 
                         <div class="banner-product-img">
                             <img
-                                src="./assets/img/pasithec-machine.png"
+                                src="assets/img/pasithec-machine.png"
                                 alt="Pasithec Heyer"
                             />
                         </div>
                         <!-- <div class="blue-diagonal-shape">
                             <img
-                                src="../assets/img/right-banner.png"
+                                src="assets/img/right-banner.png"
                                 alt="Shape"
                             />
                         </div> -->
@@ -97,22 +97,22 @@
 
                         <div class="brands-list">
                             <div class="brands-item">
-                                <img src="../assets/img/brand-weyer.png" />
+                                <img src="assets/img/brand-weyer.png" />
                             </div>
                             <div class="brands-item">
-                                <img src="../assets/img/brand-kalamed.png" />
+                                <img src="assets/img/brand-kalamed.png" />
                             </div>
                             <div class="brands-item">
-                                <img src="../assets/img/brand-heyer.png" />
+                                <img src="assets/img/brand-heyer.png" />
                             </div>
                             <div class="brands-item">
-                                <img src="../assets/img/brand-neurowerk.png" />
+                                <img src="assets/img/brand-neurowerk.png" />
                             </div>
                             <div class="brands-item">
-                                <img src="../assets/img/brand-olidef.png" />
+                                <img src="assets/img/brand-olidef.png" />
                             </div>
                             <div class="brands-item">
-                                <img src="../assets/img/brand-daray.png" />
+                                <img src="assets/img/brand-daray.png" />
                             </div>
                         </div>
 
@@ -132,7 +132,7 @@
                         </div>
                         <div class="cat-img">
                             <img
-                                src="./assets/img/chan-doan.png"
+                                src="assets/img/chan-doan.png"
                                 alt="CHẨN ĐOÁN HÌNH ẢNH"
                             />
                         </div>
@@ -141,7 +141,7 @@
                     <div class="cat-item purple">
                         <div class="cat-img">
                             <img
-                                src="./assets/img/hoi-suc.png"
+                                src="assets/img/hoi-suc.png"
                                 alt="HỒI SỨC CẤP CỨU"
                             />
                         </div>
@@ -154,10 +154,7 @@
 
                     <div class="cat-item yellow">
                         <div class="cat-img">
-                            <img
-                                src="./assets/img/phong-mo.png"
-                                alt="PHÒNG MỔ"
-                            />
+                            <img src="assets/img/phong-mo.png" alt="PHÒNG MỔ" />
                         </div>
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
@@ -174,7 +171,7 @@
                         </div>
                         <div class="cat-img">
                             <img
-                                src="./assets/img/noi-khoa.png"
+                                src="assets/img/noi-khoa.png"
                                 alt="CHUYÊN KHOA NỘI"
                             />
                         </div>
@@ -187,13 +184,13 @@
                             <a href="#" class="btn-more">Xem thêm ></a>
                         </div>
                         <div class="cat-img">
-                            <img src="./assets/img/san-nhi.png" alt="" />
+                            <img src="assets/img/san-nhi.png" alt="" />
                         </div>
                     </div>
 
                     <div class="cat-item blue">
                         <div class="cat-img">
-                            <img src="./assets/img/phuc-hoi.png" alt="" />
+                            <img src="assets/img/phuc-hoi.png" alt="" />
                         </div>
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
@@ -216,7 +213,7 @@
                         <div class="news-item">
                             <div class="news-img">
                                 <img
-                                    src="./assets/img/new-1.png"
+                                    src="assets/img/new-1.png"
                                     alt="Heart health"
                                 />
                             </div>
@@ -247,7 +244,7 @@
                             </div>
                             <div class="news-img">
                                 <img
-                                    src="../assets/img/new-2.png"
+                                    src="assets/img/new-2.png"
                                     alt="Family health"
                                 />
                             </div>
@@ -255,7 +252,7 @@
 
                         <div class="news-item">
                             <div class="news-img">
-                                <img src="../assets/img/new-3.png" alt="Yoga" />
+                                <img src="assets/img/new-3.png" alt="Yoga" />
                             </div>
                             <div class="news-text">
                                 <h3>
@@ -283,10 +280,7 @@
                                 </p>
                             </div>
                             <div class="news-img">
-                                <img
-                                    src="../assets/img/new-4.png"
-                                    alt="Doctors"
-                                />
+                                <img src="assets/img/new-4.png" alt="Doctors" />
                             </div>
                         </div>
                     </div>
@@ -295,6 +289,6 @@
             <div id="footer-include"></div>
         </main>
 
-        <script src="./assets/js/layout.js"></script>
+        <script src="assets/js/layout.js"></script>
     </body>
 </html>
