--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
         <!-- FAVICON -->
         <link rel="shortcut icon" href="./assets/img/logo.png" />
-
+        <!-- BOOSTRAP
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+        /> -->
         <!-- GOOGLE FONT -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
