--- a/pages/sidebar.html
+++ b/pages/sidebar.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="../assets/css/sidebar.css" />
 <div class="sidebar-box">
     <div class="sidebar-header">SẢN PHẨM NỔI BẬT</div>
     <div class="sidebar-content">
