--- a/pages/news.html
+++ b/pages/news.html
@@ -33,6 +33,12 @@
     <body>
         <main class="app">
             <div id="header-include"></div>
+            <section class="sv-banner"></section>
+
+            <!-- SERVICE BREADCRUMB -->
+            <div class="sv-breadcrumb">
+                <a href="#">Trang chủ</a> / <span>Tin tức</span>
+            </div>
             <aside class="content-right" id="sidebar-include"></aside>
 
             <div id="footer-include"></div>
