--- a/pages/service.html
+++ b/pages/service.html
@@ -29,18 +29,14 @@
 
         <!-- MAIN (layout, header, footer, nav...) -->
         <link rel="stylesheet" href="../assets/css/main.css" />
+        <!-- MAIN (layout, header, footer, nav...) -->
+        <link rel="stylesheet" href="../assets/css/service.css" />
     </head>
     <body>
         <main class="main">
             <div id="header-include"></div>
             <!-- SERVICE PAGE BANNER -->
-            <section class="sv-banner">
-                <img
-                    src="../assets/img/logoabout.jpg"
-                    alt="Service Banner"
-                    class="sv-banner-img"
-                />
-            </section>
+            <section class="sv-banner"></section>
 
             <!-- SERVICE BREADCRUMB -->
             <div class="sv-breadcrumb">
@@ -76,7 +72,7 @@
 
                     <div class="sv-image-block">
                         <img
-                            src="../assets/img/service.jpg"
+                            src="../assets/img/service.png"
                             alt="Service Image"
                         />
                     </div>
