--- a/pages/header.html
+++ b/pages/header.html
@@ -30,7 +30,9 @@
     <nav class="nav">
         <ul class="nav-list">
             <li>
-                <a href="../index.html" class="nav-item-link">Trang chủ</a>
+                <a href="../index.html" class="nav-item-link active"
+                    >Trang chủ</a
+                >
             </li>
             <li>
                 <a href="../pages/about.html" class="nav-item-link"
