--- a/pages/header.html
+++ b/pages/header.html
@@ -30,20 +30,66 @@
     <nav class="nav">
         <ul class="nav-list">
             <li>
-                <a href="../index.html" class="nav-item-link active"
-                    >Trang chủ</a
-                >
+                <a href="../index.html" class="nav-item-link">Trang chủ</a>
             </li>
             <li>
                 <a href="../pages/about.html" class="nav-item-link"
                     >Giới thiệu</a
                 >
             </li>
-            <li>
-                <a href="../pages/product.html" class="nav-item-link"
-                    >Sản phẩm</a
-                >
+
+            <li class="nav-item has-mega">
+                <a href="" class="nav-item-link">Sản phẩm</a>
+
+                <div class="mega-menu">
+                    <div class="mega-container">
+                        <div class="mega-column">
+                            <h4 class="mega-title">Chẩn đoán hình ảnh</h4>
+                            <ul class="mega-list">
+                                <li><a href="#">Máy chụp X-Quang</a></li>
+                                <li><a href="#">Máy Siêu âm</a></li>
+                                <li><a href="#">Hệ thống Máy nội soi</a></li>
+                                <li>
+                                    <a href="#">Hệ thống nội soi cổ tử cung</a>
+                                </li>
+                            </ul>
+                            <a href="#" class="view-all"
+                                >Xem tất cả
+                                <i class="fa-solid fa-caret-down"></i
+                            ></a>
+                        </div>
+
+                        <div class="mega-column">
+                            <h4 class="mega-title">Thăm dò chức năng</h4>
+                            <ul class="mega-list">
+                                <li><a href="#">Máy đo điện tim</a></li>
+                                <li><a href="#">Máy đo điện não</a></li>
+                                <li><a href="#">Máy đo chức năng hô hấp</a></li>
+                            </ul>
+                            <a href="#" class="view-all"
+                                >Xem tất cả
+                                <i class="fa-solid fa-caret-down"></i
+                            ></a>
+                        </div>
+
+                        <div class="mega-column">
+                            <h4 class="mega-title">Cấp cứu hồi sức tích cực</h4>
+                            <ul class="mega-list">
+                                <li><a href="#">Máy hỗ trợ thở</a></li>
+                                <li><a href="#">Máy thở xách tay</a></li>
+                                <li>
+                                    <a href="#">Monitor theo dõi bệnh nhân</a>
+                                </li>
+                            </ul>
+                            <a href="#" class="view-all"
+                                >Xem tất cả
+                                <i class="fa-solid fa-caret-down"></i
+                            ></a>
+                        </div>
+                    </div>
+                </div>
             </li>
+
             <li>
                 <a href="../pages/project.html" class="nav-item-link">Dự án</a>
             </li>
