--- a/index.html
+++ b/index.html
@@ -38,58 +38,46 @@
         <main id="app">
             <div id="header-include"></div>
             <div class="container">
-                <section class="home-banner">
-                    <div class="banner-bg">
-                        <img
-                            src="assets/img/bg-hospital-hall.png"
-                            alt="Hospital Hall"
-                        />
-                    </div>
+                <div class="banner">
+                    <div class="arrow left-arrow">&#10094;</div>
+                    <div class="arrow right-arrow">&#10095;</div>
 
-                    <div class="blue-diagonal-shape">
-                        <img src="assets/img/left-banner.png" alt="Shape" />
-                    </div>
-
-                    <button class="arrow prev">
-                        <i class="fa-solid fa-angle-left"></i>
-                    </button>
-                    <button class="arrow next">
-                        <i class="fa-solid fa-angle-right"></i>
-                    </button>
-
-                    <div class="banner-wrapper">
-                        <div class="banner-content">
-                            <div class="title-wrapper">
-                                <h1>
-                                    HỆ THỐNG GÂY MÊ KÈM THỞ<br />
-                                    <span>PASITHEC HEYER</span>
-                                </h1>
-                                <div class="orange-line"></div>
-                            </div>
-                            <div class="info-list">
-                                <p>===> Model: Pasithec</p>
-                                <p>===> Hãng sản xuất: HEYER</p>
-                                <p>===> Nước sản xuất: ĐỨC</p>
-                            </div>
+                    <div class="banner-container">
+                        <div class="content">
+                            <h1>
+                                HỆ THỐNG GÂY MÊ KÈM THỞ <br />
+                                <span>PASITHEC HEYER</span>
+                            </h1>
+                            <div class="divider"></div>
+                            <ul class="info-list">
+                                <li>
+                                    <span class="arrow-bullet">===></span>
+                                    Model: Pasithec
+                                </li>
+                                <li>
+                                    <span class="arrow-bullet">===></span> Hãng
+                                    sản xuất: HEYER
+                                </li>
+                                <li>
+                                    <span class="arrow-bullet">===></span> Nước
+                                    sản xuất: ĐỨC
+                                </li>
+                            </ul>
                             <a href="#" class="btn-detail"
-                                >Chi tiết <i class="fa-solid fa-angle-right"></i
-                            ></a>
+                                >Chi tiết <span class="btn-arrow">></span></a
+                            >
                         </div>
 
-                        <div class="banner-product-img">
+                        <div class="image-section">
                             <img
-                                src="assets/img/pasithec-machine.png"
-                                alt="Pasithec Heyer"
+                                src="./assets/img/pasithec-machine.png"
+                                alt="Máy y tế"
                             />
                         </div>
-                        <!-- <div class="blue-diagonal-shape">
-                            <img
-                                src="assets/img/right-banner.png"
-                                alt="Shape"
-                            />
-                        </div> -->
+
+                        <div class="shape-right"></div>
                     </div>
-                </section>
+                </div>
 
                 <section class="brands">
                     <div class="brands-box">
