--- a/pages/news.html
+++ b/pages/news.html
@@ -29,6 +29,9 @@
 
         <!-- MAIN (layout, header, footer, nav...) -->
         <link rel="stylesheet" href="../assets/css/main.css" />
+
+        <!-- NEWS -->
+        <link rel="stylesheet" href="../assets/css/news.css" />
     </head>
     <body>
         <main class="app">
@@ -39,6 +42,95 @@
             <div class="sv-breadcrumb">
                 <a href="#">Trang chủ</a> / <span>Tin tức</span>
             </div>
+
+            <section class="news-wrapper">
+                <div class="container news-container">
+                    <div class="news-main">
+                        <h2 class="section-title">
+                            <i class="fa-solid fa-signal"></i> TIN TỨC
+                        </h2>
+
+                        <div class="news-list">
+                            <article class="news-item featured">
+                                <div class="news-thumb">
+                                    <img
+                                        src="../assets/img/news1.jpg"
+                                        alt="Tin tức"
+                                    />
+                                </div>
+                                <div class="news-info">
+                                    <h3>
+                                        Khi bị nhồi máu cơ tim, bạn chỉ có 10
+                                        giây để cứu tự cứu lấy mình
+                                    </h3>
+                                    <p class="news-date">
+                                        <i class="fa-regular fa-clock"></i>
+                                        23-02-2018
+                                    </p>
+                                    <p class="news-desc">
+                                        Bạn cảm thấy trong ngực có một luồng đau
+                                        nhói, hơn thế nữa nó bắt đầu lan dần đến
+                                        cánh tay và cằm. Ngay lúc này, muốn đến
+                                        bệnh viện gần nhất vẫn còn một đoạn
+                                        nữa...
+                                    </p>
+                                    <a href="#" class="btn-detail"
+                                        >CHI TIẾT
+                                        <i class="fa-solid fa-caret-right"></i
+                                    ></a>
+                                </div>
+                            </article>
+
+                            <article class="news-item">
+                                <div class="news-thumb">
+                                    <img
+                                        src="../assets/img/news2.jpg"
+                                        alt="Tin tức"
+                                    />
+                                </div>
+                                <div class="news-info">
+                                    <h3>
+                                        Khi bị nhồi máu cơ tim, bạn chỉ có 10
+                                        giây để cứu tự cứu lấy mình
+                                    </h3>
+                                    <p class="news-date">
+                                        <i class="fa-regular fa-clock"></i>
+                                        23-02-2018
+                                    </p>
+                                    <p class="news-desc">
+                                        Bạn cảm thấy trong ngực có một luồng đau
+                                        nhói, hơn thế nữa nó bắt đầu lan dần đến
+                                        cánh tay và cằm...
+                                    </p>
+                                    <a href="#" class="btn-detail"
+                                        >CHI TIẾT
+                                        <i class="fa-solid fa-caret-right"></i
+                                    ></a>
+                                </div>
+                            </article>
+                        </div>
+
+                        <div class="pagination">
+                            <a href="#" class="active">1</a>
+                            <a href="#">2</a>
+                            <a href="#">3</a>
+                            <a href="#">4</a>
+                            <a href="#">5</a>
+                            <a href="#">6</a>
+                            <a href="#">7</a>
+                            <a href="#">8</a>
+                            <a href="#"
+                                ><i class="fa-solid fa-angle-right"></i
+                            ></a>
+                            <a href="#"
+                                ><i class="fa-solid fa-angles-right"></i
+                            ></a>
+                        </div>
+                    </div>
+
+                    <aside class="news-sidebar" id="sidebar-include"></aside>
+                </div>
+            </section>
             <aside class="content-right" id="sidebar-include"></aside>
 
             <div id="footer-include"></div>
