--- a/pages/header.html
+++ b/pages/header.html
@@ -39,10 +39,11 @@
             </li>
 
             <li class="nav-item has-mega">
-                <a href="" class="nav-item-link">Sản phẩm</a>
+                <a href="#" class="nav-item-link">Sản phẩm</a>
 
                 <div class="mega-menu">
                     <div class="mega-container">
+                        <!-- Cột 1 -->
                         <div class="mega-column">
                             <h4 class="mega-title">Chẩn đoán hình ảnh</h4>
                             <ul class="mega-list">
@@ -53,12 +54,13 @@
                                     <a href="#">Hệ thống nội soi cổ tử cung</a>
                                 </li>
                             </ul>
-                            <a href="#" class="view-all"
-                                >Xem tất cả
-                                <i class="fa-solid fa-caret-down"></i
-                            ></a>
+                            <a href="#" class="view-all">
+                                Xem tất cả
+                                <i class="fa-solid fa-caret-down"></i>
+                            </a>
                         </div>
 
+                        <!-- Cột 2 -->
                         <div class="mega-column">
                             <h4 class="mega-title">Thăm dò chức năng</h4>
                             <ul class="mega-list">
@@ -66,12 +68,13 @@
                                 <li><a href="#">Máy đo điện não</a></li>
                                 <li><a href="#">Máy đo chức năng hô hấp</a></li>
                             </ul>
-                            <a href="#" class="view-all"
-                                >Xem tất cả
-                                <i class="fa-solid fa-caret-down"></i
-                            ></a>
+                            <a href="#" class="view-all">
+                                Xem tất cả
+                                <i class="fa-solid fa-caret-down"></i>
+                            </a>
                         </div>
 
+                        <!-- Cột 3 -->
                         <div class="mega-column">
                             <h4 class="mega-title">Cấp cứu hồi sức tích cực</h4>
                             <ul class="mega-list">
@@ -80,11 +83,73 @@
                                 <li>
                                     <a href="#">Monitor theo dõi bệnh nhân</a>
                                 </li>
+                                <li>
+                                    <a href="#">Máy theo dõi độ sâu gây mê</a>
+                                </li>
                             </ul>
-                            <a href="#" class="view-all"
-                                >Xem tất cả
-                                <i class="fa-solid fa-caret-down"></i
-                            ></a>
+                            <a href="#" class="view-all">
+                                Xem tất cả
+                                <i class="fa-solid fa-caret-down"></i>
+                            </a>
+                        </div>
+
+                        <!-- Cột 4 -->
+                        <div class="mega-column">
+                            <h4 class="mega-title">Thiết bị phòng mổ</h4>
+                            <ul class="mega-list">
+                                <li><a href="#">Máy gây mê kèm thở</a></li>
+                                <li><a href="#">Bàn mổ cơ-điện-thủy lực</a></li>
+                                <li>
+                                    <a href="#">Đèn mổ LED ánh sáng lạnh</a>
+                                </li>
+                                <li><a href="#">Dao mổ điện</a></li>
+                                <li><a href="#">Máy hút dịch</a></li>
+                            </ul>
+                            <a href="#" class="view-all">
+                                Xem tất cả
+                                <i class="fa-solid fa-caret-down"></i>
+                            </a>
+                        </div>
+
+                        <!-- Cột 5 -->
+                        <div class="mega-column">
+                            <h4 class="mega-title">Thiết bị nhi - Sản khoa</h4>
+                            <ul class="mega-list">
+                                <li><a href="#">Lồng ấp trẻ sơ sinh</a></li>
+                                <li>
+                                    <a href="#"
+                                        >Giường hồi sức và sưởi ấm trẻ sơ
+                                        sinh</a
+                                    >
+                                </li>
+                                <li><a href="#">Đèn chiếu vàng da</a></li>
+                                <li><a href="#">Nôi sơ sinh</a></li>
+                            </ul>
+                            <a href="#" class="view-all">
+                                Xem tất cả
+                                <i class="fa-solid fa-caret-down"></i>
+                            </a>
+                        </div>
+
+                        <!-- Cột 6 -->
+                        <div class="mega-column">
+                            <h4 class="mega-title">Thiết bị y tế khác</h4>
+                            <ul class="mega-list">
+                                <li><a href="#">Thiết bị y tế Gia đình</a></li>
+                                <li>
+                                    <a href="#"
+                                        >Vật tư y tế, tiêu hao, hóa chất</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="#">Các bộ dụng cụ phẫu thuật</a>
+                                </li>
+                                <li><a href="#">Thiết bị thú y</a></li>
+                            </ul>
+                            <a href="#" class="view-all">
+                                Xem tất cả
+                                <i class="fa-solid fa-caret-down"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -98,8 +163,20 @@
                     >Dịch vụ</a
                 >
             </li>
-            <li>
-                <a href="../pages/news.html" class="nav-item-link">Tin tức</a>
+            <li class="nav-item-po">
+                <a href="../pages/news.html" class="nav-item-link">
+                    Tin tức
+                    <ul class="nav-list-child">
+                        <li>
+                            <a href="" class="list-child-link">Tin tức y tế</a>
+                        </li>
+                        <li>
+                            <a href="" class="list-child-link"
+                                >Tin tức nội bộ</a
+                            >
+                        </li>
+                    </ul>
+                </a>
             </li>
             <li>
                 <a href="../pages/recruitment.html" class="nav-item-link"
