--- a/pages/recruitment.html
+++ b/pages/recruitment.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Tuyển dụng</title>
+
         <!-- ICON -->
         <link
             rel="stylesheet"
@@ -17,23 +18,103 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
             rel="stylesheet"
         />
 
-        <!-- RESET CSS (luôn đầu tiên) -->
+        <!-- RESET -->
         <link rel="stylesheet" href="../assets/css/resets.css" />
-
-        <!-- BASE / COMMON STYLE -->
+        <!-- BASE -->
         <link rel="stylesheet" href="../assets/css/base.css" />
-
-        <!-- MAIN (layout, header, footer, nav...) -->
+        <!-- MAIN -->
         <link rel="stylesheet" href="../assets/css/main.css" />
+        <!-- TUYỂN DỤNG -->
+        <link rel="stylesheet" href="../assets/css/recruitment.css" />
     </head>
+
     <body>
         <main class="app">
+            <!-- HEADER -->
             <div id="header-include"></div>
-            <aside class="content-right" id="sidebar-include"></aside>
+
+            <!-- CONTENT -->
+            <section class="recruit-banner">
+                <div class="recruit-banner-content">
+                    <h1>TUYỂN DỤNG</h1>
+                    <p>Gia nhập đội ngũ của chúng tôi để cùng phát triển</p>
+                </div>
+            </section>
+
+            <section class="recruit-container">
+                <div class="recruit-intro">
+                    <h2>Cơ hội nghề nghiệp</h2>
+                    <p>
+                        Chúng tôi luôn tìm kiếm những ứng viên năng động, có
+                        tinh thần học hỏi và mong muốn phát triển lâu dài cùng
+                        công ty.
+                    </p>
+                </div>
+
+                <div class="recruit-list">
+                    <!-- ITEM -->
+                    <div class="recruit-item">
+                        <h3>Nhân viên IT</h3>
+                        <ul>
+                            <li>
+                                <i class="fa-solid fa-location-dot"></i> Hà Nội
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-briefcase"></i> Toàn thời
+                                gian
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-money-bill"></i> Thỏa
+                                thuận
+                            </li>
+                        </ul>
+                        <a href="#" class="recruit-btn">Ứng tuyển</a>
+                    </div>
+
+                    <div class="recruit-item">
+                        <h3>Nhân viên Marketing</h3>
+                        <ul>
+                            <li>
+                                <i class="fa-solid fa-location-dot"></i> TP. Hồ
+                                Chí Minh
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-briefcase"></i> Toàn thời
+                                gian
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-money-bill"></i> Thỏa
+                                thuận
+                            </li>
+                        </ul>
+                        <a href="#" class="recruit-btn">Ứng tuyển</a>
+                    </div>
+
+                    <div class="recruit-item">
+                        <h3>Nhân viên Kinh doanh</h3>
+                        <ul>
+                            <li>
+                                <i class="fa-solid fa-location-dot"></i> Đà Nẵng
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-briefcase"></i> Toàn thời
+                                gian
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-money-bill"></i> Hoa hồng
+                                + lương
+                            </li>
+                        </ul>
+                        <a href="#" class="recruit-btn">Ứng tuyển</a>
+                    </div>
+                </div>
+            </section>
+
+            <!-- FOOTER -->
             <div id="footer-include"></div>
         </main>
 
