--- a/pages/header.html
+++ b/pages/header.html
@@ -163,20 +163,20 @@
                     >Dịch vụ</a
                 >
             </li>
-            <li class="nav-item-po">
-                <a href="../pages/news.html" class="nav-item-link">
-                    Tin tức
-                    <ul class="nav-list-child">
-                        <li>
-                            <a href="" class="list-child-link">Tin tức y tế</a>
-                        </li>
-                        <li>
-                            <a href="" class="list-child-link"
-                                >Tin tức nội bộ</a
-                            >
-                        </li>
-                    </ul>
-                </a>
+            <li class="nav-item">
+                <a
+                    href="../pages/news.html"
+                    class="nav-item-link nav-item-link-bf"
+                    >Tin tức</a
+                >
+                <ul class="nav-list-child">
+                    <li>
+                        <a href="#" class="list-child-link">Tin tức y tế</a>
+                    </li>
+                    <li>
+                        <a href="#" class="list-child-link">Tin tức nội bộ</a>
+                    </li>
+                </ul>
             </li>
             <li>
                 <a href="../pages/recruitment.html" class="nav-item-link"
