--- a/pages/about.html
+++ b/pages/about.html
@@ -90,9 +90,9 @@
                         <!-- <img src="../assets/img/about1.jpg" alt="" />
                         <img src="../assets/img/about2.jpg" alt="" />
                         <img src="../assets/img/about3.jpg" alt="" /> -->
-                        <img src="https://picsum.photos/400/300?1" />
-                        <img src="https://picsum.photos/400/300?2" />
-                        <img src="https://picsum.photos/400/300?3" />
+                        <img src="../assets/img/new-2.png" />
+                        <img src="../assets/img/new-3.png" />
+                        <img src="../assets/img/new-4.png" />
                     </div>
 
                     <h3>Hoạt động của TM Hitech:</h3>
