--- a/pages/header.html
+++ b/pages/header.html
@@ -28,11 +28,26 @@
     </header>
 
     <nav class="nav">
+        <div class="menu-toggle">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
         <ul class="nav-list">
-            <li>
+            <li class="mobile-menu-header">
+                <img
+                    src="../assets/img/logo.png"
+                    alt="logo"
+                    class="mobile-menu-logo"
+                />
+                <div class="mobile-menu-title">TM Medical Technology</div>
+            </li>
+            <li class="nav-item">
                 <a href="../index.html" class="nav-item-link">Trang chủ</a>
             </li>
-            <li>
+            <li class="nav-item">
                 <a href="../pages/about.html" class="nav-item-link"
                     >Giới thiệu</a
                 >
@@ -155,10 +170,10 @@
                 </div>
             </li>
 
-            <li>
+            <li class="nav-item">
                 <a href="../pages/project.html" class="nav-item-link">Dự án</a>
             </li>
-            <li>
+            <li class="nav-item">
                 <a href="../pages/service.html" class="nav-item-link"
                     >Dịch vụ</a
                 >
@@ -178,12 +193,12 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li class="nav-item">
                 <a href="../pages/recruitment.html" class="nav-item-link"
                     >Tuyển dụng</a
                 >
             </li>
-            <li>
+            <li class="nav-item">
                 <a href="../pages/contact.html" class="nav-item-link"
                     >Liên hệ</a
                 >
