--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
         <!-- FAVICON -->
         <link rel="shortcut icon" href="./assets/img/logo.png" />
-        <!-- BOOSTRAP
-        <link
+        <!-- BOOSTRAP -->
+        <!-- <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
             rel="stylesheet"
         /> -->
@@ -282,5 +282,6 @@
         </main>
 
         <script src="assets/js/layout.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
     </body>
 </html>
