--- a/index.html
+++ b/index.html
@@ -33,17 +33,20 @@
 
         <!-- MAIN (layout, header, footer, nav...) -->
         <link rel="stylesheet" href="assets/css/main.css" />
+
+        <!-- RESPOSIVE -->
+        <link rel="stylesheet" href="assets/css/resposive.css" />
     </head>
     <body>
         <main id="app">
             <div id="header-include"></div>
-            <div class="container">
+            <div class="containers">
                 <div class="banner">
                     <div class="arrow left-arrow">&#10094;</div>
                     <div class="arrow right-arrow">&#10095;</div>
 
                     <div class="banner-container">
-                        <div class="content">
+                        <div class="contents">
                             <h1>
                                 HỆ THỐNG GÂY MÊ KÈM THỞ <br />
                                 <span>PASITHEC HEYER</span>
