--- a/pages/project.html
+++ b/pages/project.html
@@ -41,7 +41,7 @@
 
             <!-- SERVICE BREADCRUMB -->
             <div class="project-breadcrumb">
-                <a href="#">Trang chủ</a> / <span>Liên hệ</span>
+                <a href="#">Trang chủ</a> / <span>Dự Án</span>
             </div>
             <!-- CONTENT CHÍNH -->
             <section class="content">
