--- a/pages/news.html
+++ b/pages/news.html
@@ -54,7 +54,7 @@
                         <!-- Tin tức nổi bật -->
                         <div class="news-item featured">
                             <div class="news-item__img">
-                                <a href="#"
+                                <a href=""
                                     ><img
                                         src="../assets/img/new-1.png"
                                         alt="Featured News"
@@ -62,7 +62,7 @@
                             </div>
                             <div class="news-item__info">
                                 <h3 class="news-item__title">
-                                    <a href="#"
+                                    <a href=""
                                         >Khi bị nhồi máu cơ tim, bạn chỉ có 10
                                         giây để cứu tự cứu lấy mình</a
                                     >
@@ -82,7 +82,7 @@
                                     tạo CPR - hồi sức tim phổi.
                                 </p>
                                 <div class="news-item__action">
-                                    <a href="#" class="btn-detail"
+                                    <a href="details.html" class="btn-detail"
                                         >CHI TIẾT
                                         <i class="fa-solid fa-play"></i
                                     ></a>
