--- a/index.html
+++ b/index.html
@@ -209,7 +209,12 @@
                     <!-- Phần Mobile -->
                     <div class="news-slider-mobile">
                         <div class="news-slide active">
-                            <div class="news-img-mobile"></div>
+                            <div class="news-img-mobile">
+                                <img
+                                    src="assets/img/new-1.png"
+                                    alt="Family health"
+                                />
+                            </div>
                             <div class="news-text-mobile">
                                 <h3>
                                     Khi bị nhồi máu cơ tim, bạn chỉ có 10 giây
