--- a/pages/about.html
+++ b/pages/about.html
@@ -39,7 +39,7 @@
 
             <!-- MAIN CONTAINER -->
             <!-- BANNER -->
-            <section class="banner">
+            <section class="about-banner">
                 <div class="banner-text">
                     <span
                         >Làm mọi thứ với một niềm đam mê, hoặc không là gì
