--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,9 +41,9 @@
             <div class="contact-breadcrumb">
                 <a href="#">Trang chủ</a> / <span>Liên hệ</span>
             </div>
-            <section class="sv-wrapper">
+            <section class="contact-wrapper">
                 <div class="container">
-                    <h2 class="sv-title">
+                    <h2 class="contact-title">
                         <i class="fa-solid fa-signal"></i> LIÊN HỆ
                     </h2>
 
