--- a/pages/news.html
+++ b/pages/news.html
@@ -54,7 +54,7 @@
                         <!-- Tin tức nổi bật -->
                         <div class="news-item featured">
                             <div class="news-item__img">
-                                <a href=""
+                                <a href="./details.html"
                                     ><img
                                         src="../assets/img/new-1.png"
                                         alt="Featured News"
