--- a/pages/header.html
+++ b/pages/header.html
@@ -16,12 +16,16 @@
 
         <div class="head-hotline">
             <div class="head-lang">
-                <span class="fi fi-vn"></span>
-                <span class="fi fi-us"></span>
+                <img class="fi" src="../assets/img/VietNam.png" alt="" />
+                <img class="fi" src="../assets/img/ncanh.png" alt="" />
             </div>
 
             <div class="head-phone">
-                <i class="fa-solid fa-phone"></i>
+                <img
+                    class="head-phone-icon"
+                    src="../assets/img/phone.png"
+                    alt=""
+                />
                 <span>0912.500.099</span>
             </div>
         </div>
