--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
                             <h3>CHẨN ĐOÁN HÌNH ẢNH</h3>
-                            <a href="#" class="btn-more">Xem thêm ></a>
+                            <a href="./pages/chitiet.html" class="btn-more"
+                                >Xem thêm ></a
+                            >
                         </div>
                         <div class="cat-img">
                             <img
@@ -143,7 +145,9 @@
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
                             <h3>HỒI SỨC CẤP CỨU</h3>
-                            <a href="#" class="btn-more">Xem thêm ></a>
+                            <a href="./pages/chitiet.html" class="btn-more"
+                                >Xem thêm ></a
+                            >
                         </div>
                     </div>
 
@@ -154,7 +158,9 @@
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
                             <h3>PHÒNG MỔ</h3>
-                            <a href="#" class="btn-more">Xem thêm ></a>
+                            <a href="./pages/chitiet.html" class="btn-more"
+                                >Xem thêm ></a
+                            >
                         </div>
                     </div>
 
@@ -162,7 +168,9 @@
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
                             <h3>CHUYÊN KHOA NỘI</h3>
-                            <a href="#" class="btn-more">Xem thêm ></a>
+                            <a href="./pages/chitiet.html" class="btn-more"
+                                >Xem thêm ></a
+                            >
                         </div>
                         <div class="cat-img">
                             <img
@@ -176,7 +184,9 @@
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
                             <h3>CHUYÊN KHOA SẢN - NHI</h3>
-                            <a href="#" class="btn-more">Xem thêm ></a>
+                            <a href="./pages/chitiet.html" class="btn-more"
+                                >Xem thêm ></a
+                            >
                         </div>
                         <div class="cat-img">
                             <img src="assets/img/san-nhi.png" alt="" />
@@ -190,7 +200,9 @@
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
                             <h3>PHỤC HỒI CHỨC NĂNG</h3>
-                            <a href="#" class="btn-more">Xem thêm ></a>
+                            <a href="./pages/chitiet.html" class="btn-more"
+                                >Xem thêm ></a
+                            >
                         </div>
                     </div>
                 </section>
