--- a/pages/recruitment.html
+++ b/pages/recruitment.html
@@ -87,7 +87,9 @@
                                 <span class="medical-salary"
                                     >💰 Thỏa thuận</span
                                 >
-                                <a href="#" class="medical-apply">Ứng tuyển</a>
+                                <a href="./apply.html" class="medical-apply"
+                                    >Ứng tuyển</a
+                                >
                             </div>
                         </div>
 
@@ -119,7 +121,9 @@
                                 <span class="medical-salary"
                                     >💰 8–12 triệu</span
                                 >
-                                <a href="#" class="medical-apply">Ứng tuyển</a>
+                                <a href="./apply.html" class="medical-apply"
+                                    >Ứng tuyển</a
+                                >
                             </div>
                         </div>
 
@@ -151,7 +155,9 @@
                                 <span class="medical-salary"
                                     >💰 12–18 triệu</span
                                 >
-                                <a href="#" class="medical-apply">Ứng tuyển</a>
+                                <a href="./apply.html" class="medical-apply"
+                                    >Ứng tuyển</a
+                                >
                             </div>
                         </div>
                     </div>
